# hal-harness

./: .gitignore  README.md  pyproject.toml
agents/: model_quirks.py
agents/colbench_example_agent/: azure_client.py  main.py  requirements.txt
agents/colbench_example_agent/sweet_rl/utils/: code_utils.py
agents/core_agent/: main.py  requirements.txt
agents/hal_generalist_agent/: Dockerfile.agent-env  azure_client.py  azure_direct_model.py  azure_model.py  dotenv.py  main.py  mdconvert.py  requirements.txt
agents/hal_generalist_agent/sweet_rl/models/: vllm_agent.py
agents/hal_generalist_agent/sweet_rl/utils/: code_utils.py  webpage_utils.py
agents/sab_example_agent/: litellm_engine.py  main.py  requirements.txt  science_agent.py
agents/scicode_tool_calling_agent/: agent.py  azure_direct_model.py  easy_prompt_template.txt  hard_prompt_template.txt  main.py  prompt_template.txt  requirements.txt
agents/shared/: __init__.py  agent_wrapper.py  azure_direct_model.py  azure_utils.py  config_utils.py  model_utils.py
hal/: agent_runner.py  cli.py
hal/benchmarks/: base_benchmark.py  colbench.py  corebench.py  scicode.py  scienceagentbench.py
hal/benchmarks/corebench/: core_test.bak
hal/benchmarks/scienceagentbench/ScienceAgentBench_modified/: gpt4_visual_judge.py  recover_pred_from_log.py
hal/benchmarks/scienceagentbench/ScienceAgentBench_modified/evaluation/harness/: docker_build.py  docker_utils.py  dockerfiles.py  run_evaluation.py
hal/benchmarks/sweet_rl/utils/: code_utils.py
hal/debugger/: auto_fixer.py  auto_inspector.py  fix_loader.py  inspector_pipeline.py  log_reader.py  pipeline.py  pipeline_base.py  pipeline_logger.py  runner_pipeline.py  task_utils.py  trace_writer.py
hal/utils/: docker_runner.py  local_runner.py  logging_utils.py  retry_handler.py  trace_utils.py  utils.py  vm_runner.py  weave_utils.py
hal/utils/docker/: Dockerfile
scripts/: auto_debug_batch.py
